[workspace]
members = [
    "actor_framework",
    "common",
    "n64",
    "n64/vr4300",
    "ui/",
    "tailspin",
    "tailspin-toy",
]
exclude = ["deps"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "bus-mu"
version = "0.1.0"
edition = "2021"

[features]
default = ["ui"]
ui = [
    "dep:ui",
    "common/ui",
    "n64/ui",
]

[dependencies]
common = { path = "common" }
n64 = { path = "n64" }
ui = { path = "ui", optional = true }
anyhow = { workspace = true }
clap = { workspace = true }

[workspace.dependencies]
modular-bitfield = { git = "https://github.com/phire/modular-bitfield.git", rev = "b922ff94" }
eframe = "0.24"
egui = "0.24"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
#lto = true

